[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/images/gui/inventory/inventory.png" type="Texture" id=1]
[ext_resource path="res://files/Inventory.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/itemicon3.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/inventory/itemicon2.png" type="Texture" id=5]
[ext_resource path="res://assets/images/iconsgear/ArmorBasic.png" type="Texture" id=6]
[ext_resource path="res://files/buttons/inventory/all0.png" type="Texture" id=7]
[ext_resource path="res://files/buttons/inventory/all2.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/inventory/all1.png" type="Texture" id=9]
[ext_resource path="res://files/buttons/inventory/weapon0.png" type="Texture" id=10]
[ext_resource path="res://files/buttons/inventory/weapon2.png" type="Texture" id=11]
[ext_resource path="res://files/buttons/inventory/weapon1.png" type="Texture" id=12]
[ext_resource path="res://files/buttons/inventory/armor0.png" type="Texture" id=13]
[ext_resource path="res://files/buttons/inventory/armor2.png" type="Texture" id=14]
[ext_resource path="res://files/buttons/inventory/armor1.png" type="Texture" id=15]
[ext_resource path="res://files/buttons/inventory/mats0.png" type="Texture" id=16]
[ext_resource path="res://files/buttons/inventory/mats2.png" type="Texture" id=17]
[ext_resource path="res://files/buttons/inventory/mats1.png" type="Texture" id=18]
[ext_resource path="res://files/buttons/inventory/use0.png" type="Texture" id=19]
[ext_resource path="res://files/buttons/inventory/use2.png" type="Texture" id=20]
[ext_resource path="res://files/buttons/inventory/use1.png" type="Texture" id=21]
[ext_resource path="res://files/buttons/inventory/quest0.png" type="Texture" id=22]
[ext_resource path="res://files/buttons/inventory/quest2.png" type="Texture" id=23]
[ext_resource path="res://files/buttons/inventory/quest1.png" type="Texture" id=24]
[ext_resource path="res://assets/images/gui/menu/confirmpanel.png" type="Texture" id=25]
[ext_resource path="res://assets/images/gui/menu/menubuttonnorm.png" type="Texture" id=26]
[ext_resource path="res://assets/images/gui/menu/menubuttonpressed.png" type="Texture" id=27]
[ext_resource path="res://assets/images/gui/menu/menubuttonhl.png" type="Texture" id=28]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=29]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 649, 788 )

[node name="Panel" type="Panel"]
margin_left = 36.0
margin_top = 18.0
margin_right = 685.0
margin_bottom = 806.0
rect_min_size = Vector2( 649, 788 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="HiddenContainer" type="ScrollContainer" parent="."]
visible = false
margin_left = 81.0
margin_top = 230.0
margin_right = 554.0
margin_bottom = 702.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="HiddenContainer"]
columns = 7

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 81.0
margin_top = 230.0
margin_right = 554.0
margin_bottom = 702.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
columns = 7

[node name="Button" type="TextureButton" parent="ScrollContainer/GridContainer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Number" type="Label" parent="ScrollContainer/GridContainer/Button"]
visible = false
margin_left = 1.0
margin_top = 41.0
margin_right = 62.0
margin_bottom = 65.0
text = "100%"
align = 2

[node name="Image" type="TextureRect" parent="ScrollContainer/GridContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 60.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 76.0
margin_top = 106.0
margin_right = 562.0
margin_bottom = 170.0
custom_constants/separation = 18

[node name="all" type="TextureButton" parent="HBoxContainer"]
margin_right = 66.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYALL"
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="weapon" type="TextureButton" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 150.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYWEAPON"
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="armor" type="TextureButton" parent="HBoxContainer"]
margin_left = 168.0
margin_right = 234.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYARMOR"
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )

[node name="mat" type="TextureButton" parent="HBoxContainer"]
margin_left = 252.0
margin_right = 318.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYMATERIAL"
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )

[node name="usable" type="TextureButton" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 402.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYUSE"
toggle_mode = true
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 21 )

[node name="quest" type="TextureButton" parent="HBoxContainer"]
margin_left = 420.0
margin_right = 486.0
margin_bottom = 64.0
hint_tooltip = "INVENTORYQUEST"
toggle_mode = true
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 24 )

[node name="NumberSelectPanel" type="TextureRect" parent="."]
visible = false
margin_left = 197.0
margin_top = 206.0
margin_right = 669.0
margin_bottom = 445.0
texture = ExtResource( 25 )

[node name="RichTextLabel" type="RichTextLabel" parent="NumberSelectPanel"]
margin_left = 78.0
margin_top = 61.0
margin_right = 388.0
margin_bottom = 109.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Purchase X?"
text = "Purchase X?"

[node name="SpinBox" type="SpinBox" parent="NumberSelectPanel"]
margin_left = 171.0
margin_top = 127.0
margin_right = 271.0
margin_bottom = 161.0

[node name="ConfirmButton" type="TextureButton" parent="NumberSelectPanel"]
margin_left = 38.0
margin_top = 161.0
margin_right = 206.0
margin_bottom = 216.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 28 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NumberSelectPanel/ConfirmButton"]
margin_left = 12.0
margin_top = 17.0
margin_right = 154.0
margin_bottom = 41.0
text = "CONFIRM"
align = 1

[node name="CancelButton" type="TextureButton" parent="NumberSelectPanel"]
margin_left = 258.0
margin_top = 161.0
margin_right = 426.0
margin_bottom = 216.0
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 28 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NumberSelectPanel/CancelButton"]
margin_left = 12.0
margin_top = 17.0
margin_right = 154.0
margin_bottom = 41.0
text = "CANCEL"
align = 1

[node name="MaxButton" type="Button" parent="NumberSelectPanel"]
visible = false
margin_left = 142.0
margin_top = 123.0
margin_right = 302.0
margin_bottom = 153.0
text = "Max"

[node name="EndPrice" type="Label" parent="NumberSelectPanel"]
margin_left = 284.0
margin_top = 133.0
margin_right = 406.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "= 100"

[node name="BasePrice" type="Label" parent="NumberSelectPanel"]
margin_left = 38.0
margin_top = 132.0
margin_right = 160.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100*"
align = 2

[node name="TextureRect" type="TextureRect" parent="NumberSelectPanel"]
margin_left = 376.0
margin_top = 117.0
margin_right = 426.0
margin_bottom = 170.0
mouse_filter = 2
texture = ExtResource( 29 )
expand = true
stretch_mode = 6

